# Django_23.2

./: .env.sample  data.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0003_blog.py  0004_alter_blog_options.py  0005_remove_blog_type_blog_is_published.py  0006_version.py  0007_alter_product_date_created.py  0008_product_owner.py
catalog/templates/catalog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_hidden.html  blog_list.html  category_list.html  index.html  product_detail.html  product_form.html
catalog/templates/catalog/includes/: inc_product.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html  reset.html  user_form.html
