[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Dmitry Frost <dmitfrost@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
pillow = "^9.5.0"
ipython = "^8.14.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
pytils = "^0.4.1"
django-crispy-forms = "^2.0"
redis = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
